--- a/espace-client.html
+++ b/espace-client.html
@@ -752,7 +752,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 url: "https://tsoumbou.pythonanywhere.com/api/updateInfosClient/".concat($("#id-name").val(),"/",$("#id-firstname").val(),"/",$("#id-phone").val(),"/", sessionStorage.getItem("session_token"))
                 dataType: "json",
                 cache: false,
-                success: function(data) {
+                success: function() {
                        // Success message
                     console.log("test OK");
                 },
