--- a/espace-client.html
+++ b/espace-client.html
@@ -277,6 +277,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div>
                     <form action="#" method="post" class="creditly-card-form agileinfo_form">
 									<section class="creditly-wrapper wthree, w3_agileits_wrapper">
+                                        <p id="msg-update-phone"></p>
 										<div class="credit-card-wrapper">
 											<div class="first-row form-group">
 												<div class="controls">
@@ -324,7 +325,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- button modification numéro -->
         <script type="text/javascript">
           $("button").click(function(){
-            sessionStorage.setItem("phone", $("#id-phone").val());
             updateUserPhone();
           });
         </script>
@@ -755,10 +755,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 success: function() {
                        // Success message
                     console.log("test OK");
+                    sessionStorage.setItem("phone", $("#id-phone").val());
+                    $('#msg-update-phone').html("Mise à jour effectuée avec succès.");
                 },
                 error: function() {
                     // Fail message
                     console.log("KO");
+                    console.log("Error");
+                    $('#msg-update-phone').html("Problème rencontré lors de la mise à jour, réessayez !");
                 },
             })
 }
